--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,8 @@ jobs:
                   cmake --build . --config Release -j
             - name: test
               run: |
-                  cmake --build build --target test
+                  cmake --build build --target help
+                  cmake --build build --target RUN_TESTS
             - name: benchmark
-              run: "build/implicit_predicates_tests.exe benchmark"
+              run: |
+                  build/implicit_predicates_tests.exe benchmark
