Fix exe path in github workflow.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,4 @@ jobs:
             - name: test
               run: cmake --build build --target RUN_TESTS
             - name: benchmark
-              run: |
-                  dir build
-                  build\\implicit_predicates_tests.exe benchmark
+              run: build/Release/implicit_predicates_tests.exe benchmark
