--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,12 @@ if (${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
 endif()
 add_library(implicit_predicates::internal ALIAS internal_implicit_predicates)
 
+option(IMPLICIT_PREDICATES_STAGE_STATS "Track stats of different stages." OFF)
+if (IMPLICIT_PREDICATES_STAGE_STATS)
+    target_compile_definitions(internal_implicit_predicates PUBLIC
+        "-DIMPLICIT_PREDICATES_STAGE_STATS")
+endif()
+
 file(GLOB INC_FILES ${CMAKE_CURRENT_LIST_DIR}/include/*.h)
 file(GLOB SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp)
 
